move global alters at the end of the body to prevent shift effect

--- a/hg_delivery/static/delivery.css
+++ b/hg_delivery/static/delivery.css
@@ -30,6 +30,15 @@ body {
   background-color:white;
   border-top:solid 2px;
   overflow:auto;
+  z-index:5;
+}
+
+#container_alert {
+  position:fixed;
+  width:100%;
+  bottom:0px;
+  border:none;
+  z-index:100;
 }
 
 .log {
